--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require": {
         "php": ">=7.0",
-        "laravel/framework": "^5.0.0"
+        "illuminate/database": "^5.0|^6.0|^7.0",
+        "illuminate/validation": "^5.0|^6.0|^7.0"
     }
 }
