--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require": {
         "php": ">=7.0",
-        "illuminate/database": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
-        "illuminate/validation": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
+        "illuminate/database": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/validation": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0"
     }
 }
